[package]
name = "libtegra"
version = "0.1.0"
authors = [
    "Valentin B. <valentin.be@protonmail.com>",
    "Justus K. <justus.k@protonmail.com>",
    "Thomas Guillemard <me@thog.eu>",
]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
cortex-a = "2.9.0"
enum_primitive = { git = "https://github.com/mirage-rs/enum_primitive-rs.git" }
paste = "0.1.7"
register = "0.5.0"
static_assertions = "1.1.0"
embedded-hal = { version = "0.2.3", optional = true }

[dependencies.num-traits]
version = "0.2"
default-features = false

[features]
default = ["hal"]
hal = ["embedded-hal"]