[package]
name = "libtegra"
version = "0.1.0"
authors = [
    "Valentin B. <valentin.be@protonmail.com>",
    "Justus K. <justus.k@protonmail.com>",
    "Thomas Guillemard <me@thog.eu>",
]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
cortex-a = "3.0.0"
embedded-hal = { version = "0.2.3", optional = true }
enum_primitive = { git = "https://github.com/mirage-rs/enum_primitive-rs.git" }
paste = "0.1.10"
register = "0.5.0"
static_assertions = "1.1.0"

[features]
default = ["hal"]
hal = ["embedded-hal"]
hal-unproven = ["embedded-hal", "embedded-hal/unproven"]
