[package]
name = "libtegra"
version = "0.1.0"
authors = [
    "Valentin B. <valentin.be@protonmail.com>",
    "Justus K. <justus.k@protonmail.com>",
    "Thog <me@thog.eu>",
]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
byteorder = { version = "1.4", default-features = false }
embedded-hal = { version = "0.2", optional = true }
enum_primitive = { git = "https://github.com/mirage-rs/enum_primitive-rs.git" }
paste = "1.0.4"
register = "1.0.2"
static_assertions = "1.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = "7.2"

[dev-dependencies]
cortex-a = "7.2"

[features]
default = ["hal", "mariko"]
hal = ["embedded-hal"]
hal-unproven = ["embedded-hal", "embedded-hal/unproven", "hal"]
mariko = []
